<resources>
    <string name="app_name">Ciro Gomes Soundboard</string>
    <string name="app_sub_name">Audios of Ciro Gomes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share_audio">Share this audio</string>
    <string name="share">Share this app</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="email" translatable="false">Email</string>
    <string name="send">Suggest audio</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="send_to">Share to</string>
    <string name="email_app" translatable="false">falasdocirogomes@gmail.com</string>

    <string name="share_subject">Try this awesome app</string>
    <string name="share_text">Hey check this cool app \'Falas do Ciro Gomes\' - https://play.google.com/store/apps/details?id=com.quartzodev.cirosoundboard</string>


    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
    <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
    <string name="aboutLibraries_description_text">

         <![CDATA[
         This app is not related to any party or politician.
         All content shown here is widely available on the web as form of interviews given by the politician.
         This app is an individual effort of mine - the developer - to promote who I think is the best option for my country as president
          <br/>
          Below you can find open source libraries used in this project.
          <br/> If you find any <b>bug</b> or have any <b>suggestion</b>, please open an issue in here <a href="mailto:falasdocirogomes@gmail.com">Send me an email</a>
          <br/>
          <br/>
          Developed with \u2764 by <a href="https://about.me/victoraldir">Victor Neves</a>
]]>

    </string>

    <string name="app_id" translatable="false">ca-app-pub-6526073251385305~8315499177</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6526073251385305/1366947445</string>
    <string name="ad_inter_main_activity">ca-app-pub-6526073251385305/9419209468</string>

    <!-- TEST
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_main_activity">	ca-app-pub-3940256099942544/1033173712</string>
    -->


    <string name="favorite_empty_message">Favorite list is empty</string>
    <string name="favorite_empty_sub_message">Swipe left to check audios</string>
    <string name="list_empty">List is empty</string>
    <string name="playing_audio">Playing %1$s</string>
    <string name="favorite_audio">"Audio %1$s marked as favorite</string>
    <string name="not_favorite_audio">"Audio %1$s marked as not favorite</string>
    <string name="tab_favorite">Favorites</string>

</resources>
