<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_send_suggestion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_action_facebook"
            android:title="@string/facebook" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_action_twitter"
            android:title="@string/twitter" />
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_action_gmail"
            android:title="@string/email" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />

    </group>
</menu>
